--- a/grc/fengyun2_data_saver.block.yml
+++ b/grc/fengyun2_data_saver.block.yml
@@ -1,6 +1,6 @@
 id: fengyun2_data_saver
 label: FengYun-2 S-VISSR2.0 Data Saver
-category: '[FengYun2]/Core'
+category: '[FengYun2]/Decoder'
 
 parameters:
 - id: path
@@ -11,13 +11,18 @@ parameters:
   label: Log
   dtype: int
   default: 'True'
+- id: corrector_state
+  label: Frames Corrector
+  dtype: int
+  default: 'True'
 
 inputs:
--   domain: message
-    id: in
+-   label: in
+    dtype: byte
+    vlen: 1
 
 templates:
     imports: import fengyun2
-    make: fengyun2.fengyun2_data_saver(${path}, ${log_state})
+    make: fengyun2.fengyun2_data_saver(${path}, ${log_state}, ${corrector_state})
 
 file_format: 1
